Day8 (Sagemakerinfra creation)/AWS-SM-Infra-TF/securitygroups.tf
resource "aws_security_group" "sagemaker-sg" {
  name        = "sagemaker-sg"
  description = "Allow TLS inbound traffic"
  vpc_id = aws_vpc.sagemaker-vpc-urvashi.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    #ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
  }
  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0./0"]
    #ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "sagemaker-sg"
  }
}
